[package]
name = "dash"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
clap = { version = "4.4.6", features = ["derive"] }
error-chain = "0.12.4"
minijinja = "1.0.8"
regex = "1.10.1"
reqwest = "0.11.22"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.3.0", features = ["json"] }
serde_yaml = "0.8.26"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
